Fixed units misaligned bug in the disk page

--- a/src/assets/styles/antd-customize/generic.less
+++ b/src/assets/styles/antd-customize/generic.less
@@ -8,6 +8,9 @@
       }
     }
   }
+  .ant-input-group-addon {
+    padding: 12px 22px 4px 7px !important;
+  }
   .ant-card{
     .ant-card:hover {
       overflow: visible;
